--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="agência, css, modulo, dimitri,">
     <title>Agência Fake</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="responsivo.css">
 </head>
 <body>
     <nav class="navbar">
@@ -36,21 +37,46 @@
             <div class="servicos">
                 <div class="card">
                     <img src="img/codificacao-da-web.png" alt="Ícone Computador">
-                    <h3>Desenvolvimento de Sites</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    <div class="card-text">
+                        <h3>Desenvolvimento de Sites</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    </div>
+                    <div class="texto-oculto">
+                        <h3>Outro Conteúdo</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/smartphone.png" alt="icone smarthphone">
-                    <h3>Desenvolvimento de Apps</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    <div class="card-text">
+                        <h3>Desenvolvimento de Apps</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    </div>
+                    <div class="texto-oculto">
+                        <h3>Outro Conteúdo</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="img/orador-de-anuncio.png" alt="Icone Auto Falante">
-                    <h3>Desenvolvimento de Marketing</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                        <div class="card-text">
+                            <h3>Marketing</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                        </div>
+                        <div class="texto-oculto">
+                            <h3>Outro Conteúdo</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta libero dolore nobis amet consequuntur quae quaerat iure, porro aliquam nemo doloremque necessitatibus molestias iusto voluptatibus vel dignissimos! Voluptate, dolores praesentium.</p>
+                        </div>
                 </div>
             </div>
         </section>
     </header>
+    <footer>
+        <div class="logo-rodape">
+            <h1 class="agencia">Agência Fake</h1>
+            <p id="footer-p">Um site feito com HTML e CSS puro</p>
+        </div>
+    </footer>
+    <b>© Todos os direitos reservados.</b>
 </body>
 </html>
