--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="agência, css, modulo, dimitri,">
     <title>Agência Fake</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 </head>
 <body>
     <nav class="navbar">
